Update dependencies and scripts in package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "studio": "npx prisma studio",
     "generate:schema": "npx prisma generate",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "start": "npx prisma generate && npx prisma migrate deploy && cross-env NODE_ENV=production node index.js",
-    "build": "npx prisma generate",
+    "start": "npx prisma generate && npx prisma db push && cross-env NODE_ENV=production node index.js",
+    "build": "npx prisma generate && npx prisma db push",
+    "postinstall": "npx prisma generate",
     "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "seed": "node prisma/seeds/seed.js"
   },
@@ -21,7 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
-    "@prisma/client": "^6.10.0",
+    "@prisma/client": "^6.15.0",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -59,7 +60,7 @@
     "babel-jest": "^30.0.0",
     "jest": "^30.0.0",
     "nodemon": "^3.1.10",
-    "prisma": "^6.10.0",
+    "prisma": "^6.15.0",
     "sequelize-cli": "^6.6.3",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
